feat: client 콘솔 뷰 구현